--- a/node-server/package.json
+++ b/node-server/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "server",
+  "type": "module",
+  "name": "node-server",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/app.js",
+  "description": "Node.js HTTP Web server for the Sub-Urban Dictionary website",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
+    "start": "node app.js"
   },
-  "author": "",
+  "author": "Shai Mann-Robison, Karim Semaan, Zadie Moon",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
