--- a/node-server/package.json
+++ b/node-server/package.json
@@ -3,7 +3,7 @@
   "name": "node-server",
   "version": "1.0.0",
   "description": "Node.js HTTP Web server for the Sub-Urban Dictionary website",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.4.3"
+    "mongoose": "^7.4.3",
+    "nodemon": "^3.0.1"
   }
 }
